feat: connect api

--- a/public/index.html
+++ b/public/index.html
@@ -29,12 +29,20 @@
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
-
+      
       You can add webfonts, meta tags, or analytics to this file.
       The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+        
+        To begin the development, run `npm start` or `yarn start`.
+        To create a production bundle, use `npm run build` or `yarn build`.
+      -->
   </body>
+  <!-- <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=lIwOjvNwoHLlBGjwq1BiWBNCjQqGY78E"></script>
+  <script>
+    window.BMap = BMap;
+  </script> -->
+  <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=eBGR7XzaPhB5UbYARl3E7ksdkMdgrCw7"></script>
+  <script>
+    window.BMap = BMap;
+  </script>
 </html>
